# data-structures

./: .gitignore  MidtermReview.md  MidtermReview.md.docx
Lab01/: CMakeLists.txt  task1.cpp  task2.cpp  task3.cpp
Lab01Submission/: Lab1.docx  Readme.txt  task1.cpp  task2.cpp  task3.cpp
Lab02/: CMakeLists.txt
Lab02/task1/: 10lines.txt  lt10lines.txt
Lab02/task2/: gt10lines.txt  outlt10lines.txt  task2.cpp
Lab02/task3/: products.txt
Lab02Submission/: Lab02.docx  README.txt
Lab03/: CMakeLists.txt  Vector.h  main.cpp
Lab03Submission/: Lab03.docx  README.txt  Vector.cpp
Lab04/: Animal.cpp  CMakeLists.txt  Horse.h  main.cpp
Lab04Submission/: Animal.h  Lab04.docx  README.txt
Lab05/: Horse.h
Lab05-2/: AnimalCollection.h  CMakeLists.txt  Fish.h
Lab05Submission/: Lab5.docx  README.txt
Lab06/: CMakeLists.txt  Disk.h  mainSinglePlayer.cpp  mainSinglePlayerWithTrackedSteps.cpp
Lab06Submission/: CMakeLists.txt  Disk.cpp  Lab06.docx  Queue.h  README.txt  Stack.h  mainTwoPlayer.cpp
Lab07/: Lab07  Lab07.cbp  Lab07.md  OrderedListOpenSpaces.h  OrderedListReverseSearch.h
Lab07Submission/: CMakeLists.txt  Lab07.docx  OrderedList.h  README.txt  main.cpp
Lab08/: CMakeLists.txt  Lab08.md  OrderedLinkedList.h  Student.cpp  Student.h  main.cpp
Lab08Submission/: CMakeLists.txt  Lab08.docx  OrderedLinkedList.h  README.txt  main.cpp  ~$Lab08.docx
Lab09/: Lab09.md  Output.docx
Lab09Submission/: CMakeLists.txt  ChainedHashTable.h  HashTable.h  README.txt  Student.cpp  Student.h  main.cpp
Lab10/: BTree.h  CMakeLists.txt  Lab10.md  Node.h  main.cpp  (+1 more)
(+27 files in other folders)
